--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,10 @@ version: "3.8"
 
 services:
   mysql:
-    image: mysql:5.7
     container_name: mysql
+    image: mysql:5.7
+    ports:
+      - "3306:3306"
     environment:
       MYSQL_ROOT_PASSWORD: root
       MYSQL_DATABASE: devops
@@ -20,8 +22,9 @@ services:
       retries: 5
       start_period: 60s
 
-  flask-app:
-    image: suraj0221/two-tier-flask-app:latest
+  flask:
+    build:
+      context: .
     container_name: flask-app
     ports:
       - "5000:5000"
